--- a/kubernetes/ingress/ingress-nginx-example.yaml
+++ b/kubernetes/ingress/ingress-nginx-example.yaml
@@ -1,4 +1,4 @@
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
@@ -17,10 +17,16 @@ spec:
     http:
       paths:
       - path: /v1/hello
+        pathType: ImplementationSpecific
         backend:
-          serviceName: example-service
-          servicePort: 80
+          service:
+            name: example-service
+            port: 
+              number: 80
       - path: /v2/hello
+        pathType: ImplementationSpecific
         backend:
-          serviceName: example-service
-          servicePort: 80
+          service:
+            name: example-service
+            port: 
+              number: 80
